--- a/IaaC/stacks/alb.yaml
+++ b/IaaC/stacks/alb.yaml
@@ -4,12 +4,9 @@ sys_path: .
 stacker_bucket: cloudformarion-configs-${account}-${region}
 
 stacks:
-  - name: kmaran-ec2
-    class_path: blueprints.ec2.EC2
+  - name: kmaran-alb
+    class_path: blueprints.alb.ALB
     enabled: true
     variables:
       Environment: ${namespace}
-      ImageId: ${ImageId}
-      InstanceType: t2.micro
-      UserData: ${EC2UserData}
       VpcId: ${xref StandardVpc::VpcId}
